tests/ui/fail-try-parse/missing_select.stderr
error: Expected `SELECT` at the beginning of SQL filter, got `FROM` instead

         = help: SQL filter must start with `SELECT` followed by columns, table and WHERE clause
         = note: It is case insensitive so `select` will also work.

 --> tests/ui/fail-try-parse/missing_select.rs:5:9
  |
5 |         FROM users WHERE  // Missing SELECT clause
  |         ^^^^
